--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <h1>{{ pageTitle }}</h1>
 
-  <p>{{ screamIt welcomeMessage }}</p>
+  <div class="container">
+    <p>{{ screamIt welcomeMessage }}</p>
 
-  {{> footer }}
+  </div>
+    {{> footer }}
+  <footer>
+
+  </footer>
 </body>
 </html>
